# MySong

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: HANDOFF.md
src/: ai.ts  backend.ts  icons.ts  main.ts  player.ts  playlist.ts  styles.css  visualizer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
