[package]
name = "mysong"
version = "0.0.3"
description = "심플한 사운드 + YouTube 플레이어"
authors = ["MySong"]
edition = "2021"

[lib]
name = "mysong_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
keyring = { version = "3", features = ["windows-native"] }
tiny_http = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
